Add Hogwats Legacy game link

--- a/index.html
+++ b/index.html
@@ -54,6 +54,15 @@
                   alt="Imagem do jogo Abion Online"
               /></a>
             </li>
+            <li>
+              <a
+                target="_blank"
+                href="https://www.twitch.tv/directory/game/Hogwarts%20Legacy"
+                ><img
+                  src="https://static-cdn.jtvnw.net/ttv-boxart/1095275650_IGDB-188x250.jpg"
+                  alt="Imagem do jogo Hogwarts Legacy"
+              /></a>
+            </li>
           </ul>
         </div>
       </section>
