--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <header>
-      <div class="header">
+      <div>
         <img src="https://github.com/shinizard.png" alt="Foto de Anderson" />
       </div>
     </header>
